some fixes
* fix some names
* return only group IDs on list-user-groups
